--- a/teste.html
+++ b/teste.html
@@ -2,19 +2,22 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-    <title> Documento teste </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <title> Documento teste </title>
     </head>
     <body>
-        <form action = "test.php" method = "POST">
-            <p>Seu nome: <input type = "text" name="nome"/></p>
-            <p>Data de nascimento: <input type = "date" date="date"/></p>
-            <p><input type="submit"/></p>
-        
+        <form  action="token.php" method="post">
+            <div class="mx-auto" style="width: 1300px;">
+                <div class="form-group" style="width:250px;">
+                    <label for="nome" >Nome: </label>
+                    <input class="form-control" type="text" id="nome" name="nome">
+                </div>
+                <div class="form-group" style="width:250px";>
+                    <label for="email">E-mail: </label> 
+                    <input class="form-control" type="email" id="email" name="email">
+                </div>
+                <button type="submit" class="btn btn-outline-dark">Enviar</button>
+            </div>
         </form>
-
     </body>
-
-
-     
-
 </html>
